source/stylesheets/components/_article.scss
.article {
  @include ma-container(em(580));
  padding-top: modular-scale(1);
  min-height: 0;
  article {
    @include clearfix;
    text-align: left;
    padding-bottom: 0;
    *:last-child {
      margin-bottom: 0;
      padding-bottom: 0;
    }
    h1 {
      margin-top: modular-scale(0);
      text-align: center;
    }
    h2, h3 {
      margin-top: modular-scale(-1);
      text-align: center;
    }
    hr {
      border-bottom: 1px solid $light-gray;
      border-left: none;
      border-right: none;
      border-top: none;
      margin: $base-spacing 0;
    }
    .type {
      border-bottom: 1px solid;
      display: inline-block;
      font-size: 0.7em;
      font-weight: 900;
      letter-spacing: 1px;
      margin-bottom: 2em;
      padding: 0.1em 0;
      text-align: left;
      text-transform: uppercase;
    }
    .subheader {
      font-size: modular-scale(1);
      font-weight: 400;
      margin-bottom: modular-scale(1);
    }
    code {
      background: #F7F7F7;
      border-radius: $base-border-radius * 1.5;
      border: 1px solid #E0E0E0;
      font-family: monaco;
      font-size: 0.65em;
      font-style: normal;
      padding: 0.1em 0.4em;
      white-space: nowrap;
    }
    h3 {
      font-size: 1em;
      font-weight: 700;
      line-height: 1.4em;
      margin-bottom: 0.5em;
      text-transform: uppercase;
    }
    p.date {
      color: transparentize($base-font-color, 0.6);
      font-size: 0.8em;
      margin-bottom: 0.5em;
    }
    p {
      max-width: em(580);
      font-weight: 300;
      letter-spacing: 1;
      margin-bottom: 1.5em;
      span {
        font-size: 0.8em;
        font-weight: 600;
        text-transform: uppercase;
      }
    }
    ol {
      @extend .default-ol
    }
    ul {
      @extend .default-ul
    }
    hr {
      width: 3em;
    }
    a.read-more {
      display: inline-block;
      font-size: 0.8em;
      font-weight: 700;
      margin-left: 0.2em;
      position: relative;
      text-transform: uppercase;
      span {
        font-size: 1.7em;
        position: absolute;
        right: -10px;
        top: -2px;
      }
    }
    p.author {
      font-style: italic;
    }
  }
}
.article--centered {
  @extend .article;

  @include media($desktop) {
    article {
      text-align: center;
    }
  }
}

.article--right {
  @extend .article;

  @include media($desktop) {
    article {
      text-align: right;
      p {
        float: right;
      }
    }
  }
}

